# python-project-52

./: .env.example  .gitignore  Makefile  README.md  TODO.md  build.sh  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  ruff.toml
task_manager/: settings.py  urls.py  views.py  wsgi.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/fixtures/: labels.json
task_manager/labels/migrations/: 0001_initial.py
task_manager/static/css/: custom.css
task_manager/statuses/: forms.py  models.py  urls.py  views.py
task_manager/statuses/fixtures/: statuses.json
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/fixtures/: task_labels.json  tasks.json
task_manager/tasks/migrations/: 0001_initial.py  0002_task_labels.py
task_manager/templates/: base.html  index.html
task_manager/templates/labels/: create.html  delete.html  index.html  update.html
task_manager/templates/registration/: login.html
task_manager/templates/statuses/: create.html  delete.html  index.html  update.html
task_manager/templates/tasks/: create.html  delete.html  detail.html  filter_form.html  index.html  update.html
task_manager/templates/users/: create.html  delete.html  index.html  update.html
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/fixtures/: users.json
task_manager/users/migrations/: 0001_initial.py  0002_alter_user_first_name_alter_user_last_name.py
