[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=5.2.8",
    "django-bootstrap5>=25.2",
    "dotenv>=0.9.9",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.2",
    "rollbar>=1.3.0",
    "ruff>=0.14.10",
]
